# agwinterm

./: .gitignore  Agwinterm.slnx  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: agterm-gap-analysis-2026-07-08.md  agterm-gap-analysis-2026-07.md  agterm-gap-analysis.md  agterm-roadmap.md  defterm-feasibility.md  defterm-testing.md  memory-profile-2026-07-09.md  windows-terminal-gap-analysis.md
installer/: README.md  agwinterm.iss  build-portable.ps1  build.ps1
native/agwinterm-core/: Cargo.toml
native/agwinterm-core/src/: cell.rs  lib.rs  screen.rs  vtparser.rs  wcwidth.rs
packaging/chocolatey/: agwinterm.nuspec
src/Agwinterm.App/: Agwinterm.App.csproj  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
src/Agwinterm.Core/: AgentStatus.cs  Agwinterm.Core.csproj  Cell.cs  CellAttributes.cs  Color.cs  IHostActions.cs  IParserPerformer.cs  KittyGraphics.cs  ParserState.cs  PastePolicy.cs  ScreenBuffer.cs  Sixel.cs  TerminalConfig.cs  TerminalEmulator.cs  Theme.cs  VtParser.cs  Wcwidth.cs
src/Agwinterm.Ctl/: Agwinterm.Ctl.csproj  Program.cs
src/Agwinterm.Pty/: AgentHooks.cs  AgentSkill.cs  Agwinterm.Pty.csproj  AppUpdate.cs  AttachedPty.cs  ClaudeIntegration.cs  ClaudeUpdate.cs  CliInstaller.cs  ControlServer.cs  DeElevatedPty.cs  FreshEnvironment.cs  GenericAgentInstaller.cs  (+13 more)
themes/: Catppuccin Latte.conf  Catppuccin Mocha.conf  Dracula.conf  GitHub Light.conf
tools/: defterm-fetch-openconsole.ps1  defterm-register.ps1  defterm-restore-conhost.ps1  kitty-capture.ps1  profile-memory.ps1  test-kitty-keyboard.ps1
(+66 files in other folders)
